# NPGKalkulator

./: .gitignore
Projekt_kalkulator/: CMakeLists.txt  SetCommonConfig.cmake  main.cpp
Projekt_kalkulator/include/: kalkulator.hpp
Projekt_kalkulator/src/: kalkulator.cpp
